--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             <rect x="14" y="10" width="3" height="3" rx="0.5" fill="#0d6efd" />
           </svg>
           <div>
-            <h1 id="courseTitle" class="h4 mb-0">Grammaire progressive du Français</h1>
+            <h1 id="courseTitle" class="h4 mb-0">
+              Grammaire progressive du Français
+            </h1>
             <div class="text-muted small">
               Interactive practice — editable title via main.js
             </div>
@@ -77,6 +79,7 @@
               0%
             </div>
           </div>
+          <div id="correctAnswersInfo" class="fw-bold mt-1"></div>
         </div>
         <div id="questionsContainer"></div>
         <div class="mt-3 d-flex gap-2">
