introduce src/main.js entrypoint (keep existing behavior)

--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
       <span>© Learning Platform DRV</span>
       <span id="appVersion"></span>
     </footer>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
